# GTA-5-MOD-MENU

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
bypass anticheat/: CMakeLists
docs/: ANTI-CHEAT_COMPATIBILITY.md  API_REFERENCE.md  BUILD_INSTRUCTIONS.md  README.md  SECURITY.md
